. [FIX] LabelBMFont: Does not crash if it can't parse the FNT. Instead it logs an error and return nil
. [FIX] LabelTTF: It is possible to set an empty string
. [FIX] Layer: API improvements
		setIsKeyboardEnabled -> setKeyboardEnabled
		setIsMouseEnabled -> setMouseEnabled
		setIsTouchEnabled -> setTouchEnabled
		setIsAcceleroterEnabled -> setAccelerometerEnabled
		New way to enable "targeted" touches: [self setTouchEnabled:YES priority:n mode:kCCTouchOneByOne];
. [FIX] LayerColor: uses correct default blending function (issues #1422 #1423)
. [FIX] Particle: Honors the directory of the .plist file when loading the .png file
. [FIX] Templates: Autoration can be overriden in runtime on iOS 6
		Fixed some grammar errors
. [FIX] Tests: Watermelon With Me uses new Chipmunk API
		Add new JS tests for Chipmunk (Buoyancy, Pyramid, Joints, etc...)
. [FIX] Texture: Improved assert when updating filter on NPOT textures
. [FIX] TextureCache: filenames are standarized before adding them into the cache
. [FIX] Windows: Toggle fullscreen does not reset whether or not to support touches (issue #1420)
. [FIX] Xcode: Fixed compiler warnigns
. [3RD] JS Bindings: Updated to v0.3
		Chipmunk API is compatible with Chipmunk-JS
		CocosBuilder Reader supports "outlets", Animation callbacks, and improved JSB API
		Better registration code
. [3RD] CocosBuilder Reader: Updated to v2.1
. [3RD] SpiderMonkey: Updated to v16.0.1
		Added armv7s support

version 2.1-beta2 13-Sept-2012
. [NEW] Templates: Support for new iPhone5 resolution: Added Default-568h@2x.png in templates and cocos2d-ios.xcodeproj
. [FIX-MAC] LabelTTF works as expected on HiDPI / RetinaDisplay MacBooks
. [FIX] Templates: Mac Chipmunk template compiles OK
			Mac Templates don't include the 32-bit architecture
			Mac Temapltes use "current version" as new deploy OS version

version 2.1-beta 7-Sept-2012
. [NEW] DrawNode: Node that batches drawing primitives (replaces the drawing primitives free functions )